# rs_document

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yml  404.html  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  search.json  sitemap.xml  zensical.toml
.github/workflows/: CI.yml  bump-version.yml  docs.yml  mega-linter.yml
dev/: claude.md  contributing.md  coverage.md  cz_changelog.md.j2  noxfile.py  pr-coverage.md  prek.md  pytest.ini  run_post_processors_tests.sh  run_rust_coverage.sh
docs/: index.md
docs/explanation/: comparisons.md  design-philosophy.md  index.md  performance.md  recursive-splitting.md  text-cleaning.md  why-rust.md
docs/how-to/: batch-operations.md  cleaning-tasks.md  index.md  langchain-integration.md  loading-documents.md  splitting-tasks.md  vector-db-prep.md
docs/reference/: cleaning-methods.md  document-class.md  index.md  splitting-methods.md  types-and-constants.md  utility-functions.md
docs/tutorial/: batch-processing.md  cleaning.md  first-document.md  index.md  installation.md  splitting.md
explanation/: index.html
explanation/comparisons/: index.html
explanation/design-philosophy/: index.html
explanation/performance/: index.html
explanation/recursive-splitting/: index.html
explanation/text-cleaning/: index.html
explanation/why-rust/: index.html
how-to/: index.html
how-to/batch-operations/: index.html
how-to/cleaning-tasks/: index.html
how-to/langchain-integration/: index.html
how-to/loading-documents/: index.html
how-to/splitting-tasks/: index.html
how-to/vector-db-prep/: index.html
python/rs_document/: __init__.py  post_processors.py  rs_document.pyi
python/tests/: lorem.txt  test_all.py  test_cleaners.py  test_cleaners_comprehensive.py  test_hypothesis_properties.py  test_post_processors_reference.py  test_splitters_comprehensive.py
reference/: index.html
reference/cleaning-methods/: index.html
reference/document-class/: index.html
reference/splitting-methods/: index.html
reference/types-and-constants/: index.html
reference/utility-functions/: index.html
search/: search_index.json
src/: lib.rs
tutorial/: index.html
tutorial/batch-processing/: index.html
tutorial/cleaning/: index.html
tutorial/first-document/: index.html
tutorial/installation/: index.html
tutorial/splitting/: index.html
